--- a/my-auction-app/package.json
+++ b/my-auction-app/package.json
@@ -7,11 +7,12 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run lint && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^5.4.10",
-    "eslint": "^8.6.0"
+    "eslint": "^8.6.0",
+    "vite-plugin-eslint": "^1.3.0"
   }
 }
