--- a/my-auction-app/package.json
+++ b/my-auction-app/package.json
@@ -12,8 +12,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.10",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.6.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.10",
     "vite-plugin-eslint": "^1.3.0"
   }
 }
