--- a/my-auction-app/package.json
+++ b/my-auction-app/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "eslint --fix .",
     "dev": "vite",
     "build": "npm run lint && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch-tailwind": "nodemon --watch tailwind.config.js --exec 'npm run dev'"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
