--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.6.0",
     "htmlhint": "^1.1.4",
-    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
     "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-windicss": "^1.9.4"
-  },
-  "dependencies": {
-    "path-browserify": "^1.0.1"
+    "vite-plugin-windicss": "^1.9.4",
+    "vite-plugin-node-polyfills": "^0.2.3",
+    "postcss": "^8.4.16"
   }
 }
