--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.6.0",
     "htmlhint": "^1.1.4",
+    "postcss": "^8.4.16",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
     "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-windicss": "^1.9.4",
-    "vite-plugin-node-polyfills": "^0.2.3",
-    "postcss": "^8.4.16"
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-windicss": "^1.9.4"
+  },
+  "dependencies": {
+    "source-map-js": "^1.2.1"
   }
 }
