--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "htmlhint": "^1.1.4",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.4.15",
