trying to fix issue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "charset",
-    "head",
-    "html",
-    "lang",
-    "meta"
-  ]
+  "cSpell.words": ["charset", "head", "html", "lang", "meta"]
 }
